--- a/demo/templates/klishin.html
+++ b/demo/templates/klishin.html
@@ -84,13 +84,13 @@
 
       // initialize the puzzles, you can add your own puzzles in gameboard.js
       // SET THIS networks.puzzles below to the puzzles you wish to include in your experiment, they will appear in the order of the array
-      //networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzle3, generatePuzzle4, generatePuzzle5, generatePuzzle6, generatePuzzle7, generatePuzzle8];
+      //networks.puzzles = [generateSimpleLine, generateSimpleArc, generateComplexArc, generateTristar, generateSimpleCross, generateVeryComplexArc, generateLinearCross, generateWavyLinearCross];
 
       // make a list of the possible puzzles
-      let possiblePuzzles = [generatePuzzle4, generatePuzzle6, generatePuzzle7, generatePuzzle8, generatePuzzleKlishinSmall, generatePuzzleKlishinBaseline, generatePuzzleKlishinLarge, generatePuzzleKlishinSparse, generatePuzzle5, generatePuzzleKlishinShortcut, generatePuzzleKlishinTree, generatePuzzleKlishinTreeShortcut, generatePuzzleKlishinTreeShuffle, generatePuzzleKlishinSemilong, generatePuzzleKlishinHalo];
+      let possiblePuzzles = [generateTristar, generateSimpleCross, generateVeryComplexArc, generateLinearCross, generateWavyLinearCross, generatePuzzleKlishinSmall, generatePuzzleKlishinBaseline, generatePuzzleKlishinLarge, generatePuzzleKlishinSparse, generatePuzzleKlishinShortcut, generatePuzzleKlishinTree, generatePuzzleKlishinTreeShortcut, generatePuzzleKlishinTreeShuffle, generatePuzzleKlishinSemilong, generatePuzzleKlishinHalo];
       
       // initialize the start puzzles as training puzzles
-      networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzle3];
+      networks.puzzles = [generateSimpleLine, generateSimpleArc, generateComplexArc];
 
       // shuffle the test puzzles for counterbalancing
       var shuffledPuzzles = possiblePuzzles.slice(0), i = possiblePuzzles.length, temp, index;
