updated klishin puzzles

--- a/demo/templates/klishin.html
+++ b/demo/templates/klishin.html
@@ -87,7 +87,7 @@
       //networks.puzzles = [generateSimpleLine, generateSimpleArc, generateComplexArc, generateTristar, generateSimpleCross, generateVeryComplexArc, generateLinearCross, generateWavyLinearCross];
 
       // make a list of the possible puzzles
-      let possiblePuzzles = [generateTristar, generateSimpleCross, generateVeryComplexArc, generateLinearCross, generateWavyLinearCross, generatePuzzleKlishinSmall, generatePuzzleKlishinBaseline, generatePuzzleKlishinLarge, generatePuzzleKlishinSparse, generatePuzzleKlishinShortcut, generatePuzzleKlishinTree, generatePuzzleKlishinTreeShortcut, generatePuzzleKlishinTreeShuffle, generatePuzzleKlishinSemilong, generatePuzzleKlishinHalo];
+      let possiblePuzzles = [generateTristar, generateSimpleCross, generateVeryComplexArc, generateLinearCross, generateWavyLinearCross, generatePuzzleKlishinSmall2, generatePuzzleKlishinBaseline2, generatePuzzleKlishinLarge2, generatePuzzleKlishinSparse2, generatePuzzleKlishinShortcut2, generatePuzzleKlishinTree2, generatePuzzleKlishinTreeShortcut2, generatePuzzleKlishinTreeShuffle2, generatePuzzleKlishinSemilong2, generatePuzzleKlishinHalo2, generatePuzzleKlishinComplexArc2, generatePuzzleKlishinWavyLinearCross2, generatePuzzleKlishinVeryComplexArc2, generatePuzzleKlishinLinearCross2, generatePuzzleKlishinHexstar, generatePuzzleKlishinFourstar, generatePuzzleKlishinComplexArc2];
       
       // initialize the start puzzles as training puzzles
       networks.puzzles = [generateSimpleLine, generateSimpleArc, generateComplexArc];
