made prolific item selectable

--- a/demo/templates/klishin.html
+++ b/demo/templates/klishin.html
@@ -88,7 +88,22 @@
 
       // make a list of the possible puzzles
       //let possiblePuzzles = [generatePuzzleKlishinComplexArc2, generatePuzzleKlishinWavyLinearCross2, generatePuzzleKlishinVeryComplexArc2, generatePuzzleKlishinLinearCross2, generatePuzzleKlishinHexstar, generatePuzzleKlishinFourstar];
-      let possiblePuzzles = [generatePuzzleKlishinSmall2, generatePuzzleKlishinBaseline2, generatePuzzleKlishinLarge2, generatePuzzleKlishinSparse2, generatePuzzleKlishinShortcut2, generatePuzzleKlishinTree2, generatePuzzleKlishinTreeShortcut2, generatePuzzleKlishinTreeShuffle2, generatePuzzleKlishinSemilong2, generatePuzzleKlishinHalo2, generatePuzzleKlishinComplexArc2, generatePuzzleKlishinWavyLinearCross2, generatePuzzleKlishinVeryComplexArc2, generatePuzzleKlishinLinearCross2, generatePuzzleKlishinHexstar, generatePuzzleKlishinFourstar];
+      let possiblePuzzles = [generatePuzzleKlishinSmall2,
+      generatePuzzleKlishinBaseline2,
+      generatePuzzleKlishinLarge2,
+      generatePuzzleKlishinSparse2,
+      generatePuzzleKlishinShortcut2,
+      generatePuzzleKlishinTree2,
+      generatePuzzleKlishinTreeShortcut2,
+      generatePuzzleKlishinTreeShuffle2,
+      generatePuzzleKlishinSemilong2,
+      generatePuzzleKlishinHalo2,
+      generatePuzzleKlishinComplexArc2,
+      generatePuzzleKlishinWavyLinearCross2,
+      generatePuzzleKlishinVeryComplexArc2,
+      generatePuzzleKlishinLinearCross2,
+      generatePuzzleKlishinHexstar,
+      generatePuzzleKlishinFourstar];
       
       // initialize the start puzzles as training puzzles
       networks.puzzles = [generateSimpleLine, generateSimpleArc, generateComplexArc];
